--- a/odin-cv-application/src/index.css
+++ b/odin-cv-application/src/index.css
@@ -1,16 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "PT Serif", serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 }
 
 a {
@@ -25,7 +32,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -37,17 +43,17 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 0.15vw solid;
+  border-color: black;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: white;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -65,4 +71,36 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* Logo */
+#logo {
+  padding: 2vw;
+  margin-top: -3vw;
+}
+
+p {
+  font-size: 3vw;
+  margin-bottom: -2vw;
+  text-align: center;
+}
+
+/* Buttons */
+#sections-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1vw;
+}
+
+.button {
+  padding: 0.75vw;
+  margin: 0.75vw;
+  background-color: white;
+}
+
+.icon {
+  width: 2vw;
+  height: 2vw;
 }
