--- a/odin-cv-application/src/index.css
+++ b/odin-cv-application/src/index.css
@@ -53,24 +53,10 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  background-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  background-color: lightgrey;
+} 
+button:active {
+  background-color: grey;
 }
 
 /* Logo */
@@ -104,3 +90,39 @@ p {
   width: 2vw;
   height: 2vw;
 }
+/* Form Section */
+
+.form {
+  margin: 2vw;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+}
+.text-input {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-bottom: 2vw;
+}
+
+input {
+  width: 85%;
+  height: 2vw;
+  background-color: transparent;
+  color: black;
+  border-radius: 4px;
+  border: 0.15vw solid;
+  border-color: black;
+  font-family: "PT Serif", serif;
+  font-size: 1vw;
+  padding-left: 0.5vw;
+}
+
+label {
+  font-size: 1.5vw;
+  font-weight: 800;
+  padding-bottom: 0.5vw;
+}
+
+/* Personal Info */
