--- a/repo/src/index.css
+++ b/repo/src/index.css
@@ -59,9 +59,16 @@ button:active {
   background-color: grey;
 }
 
+.form-section {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5vw;
+}
+
 /* Logo */
 #logo {
-  padding: 2vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
   margin-top: -3vw;
 }
 
@@ -94,11 +101,10 @@ p {
 
 .form {
   margin: 2vw;
-  width: 100%;
   display: flex;
   flex-direction: column;
-
 }
+
 .text-input {
   display: flex;
   flex-direction: column;
@@ -107,7 +113,6 @@ p {
 }
 
 input {
-  width: 85%;
   height: 2vw;
   background-color: transparent;
   color: black;
@@ -116,13 +121,26 @@ input {
   border-color: black;
   font-family: "PT Serif", serif;
   font-size: 1vw;
-  padding-left: 0.5vw;
 }
 
 label {
   font-size: 1.5vw;
   font-weight: 800;
   padding-bottom: 0.5vw;
+  color: black;
+}
+
+.add-section-button {
+  height: 4vw;
+}
+
+.form-box {
+  background-color: lightgrey;
+  border-radius: 4px;
+  border: 0.15vw solid;
+  padding: 1vw;
+  margin-bottom: 2vw;
+  
 }
 
 /* Personal Info */
