--- a/repo/src/index.css
+++ b/repo/src/index.css
@@ -5,20 +5,21 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: black;
   background-color: ghostwhite;
 
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  width: 100%;
+}
+
+#app {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-
-  width: 100%;
+  justify-content: flex-end;
+  padding-left: 3vw;
 }
 
 a {
@@ -49,7 +50,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: white;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -70,6 +70,7 @@ button:active {
   padding-top: 2vw;
   padding-bottom: 2vw;
   margin-top: -3vw;
+  width: 36vw;
 }
 
 p {
@@ -138,7 +139,7 @@ label {
   background-color: lightgrey;
   border-radius: 4px;
   border: 0.15vw solid;
-  padding: 1vw;
+  padding: 1vw; 
   margin-bottom: 2vw;
   
 }
@@ -146,7 +147,7 @@ label {
 #separate-line {
   background-color: black;
   width: 0.15vw;
-  height: 95%;
+  height: 60vw;
   margin-left: 5vw;
   margin-right: 5vw;
   margin-top: 2vw;
