--- a/repo/src/index.css
+++ b/repo/src/index.css
@@ -153,6 +153,9 @@ label {
 #document-container {
   width: 100%;
   margin: 3vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 #documentContainer {
@@ -267,4 +270,18 @@ h2 {
   margin-top: -0.5vw;
   display: flex;
   flex-direction: column;
+}
+
+/* Save as PDF button */
+#printButton {
+  width: 12vw;
+  height: 3vw;
+  margin-bottom: 2vw;
+  background-color: lightgreen;
+  color: white;
+  font-size: 1.2vw;
+  font-weight: 800;
+  font-family: 'Courier New', Courier, monospace;
+  border-radius: 6px;
+  border: none;
 }
